--- a/porlibros.html
+++ b/porlibros.html
@@ -37,7 +37,7 @@
 </nav>
 
 <!-- Aquí van los <section> con los libros -->
-  <section id="libro1">
+  <section id="libro1" class="libro activo">
     <h2>Libro 1: Oraciones Básicas V8</h2>
     <ul>
       <li><div class="oracion-btn" data-key="cruz"
@@ -59,7 +59,7 @@
   </section>
 
   <!-- LIBRO 2 -->
-<section id="libro2">
+<section id="libro2" class="libro">
   <h2>Libro 2</h2>
   <ul>
     <li><div class="oracion-btn" data-key="cruz">✝️ Señal de la Cruz</div></li>
